--- a/main.html
+++ b/main.html
@@ -1,16 +1,46 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	  <header>
+        <h1>
+            Shaw's News
+        </h1>
+    </header>
 
+    <div class="container">
+        <div class="latest-news-section">
+            <h3>Latest News Article</h3>
+            <ul type="disc">
+                <li>
+                    Article 1
+                </li>
+                <li>
+                    Article 2
+                </li>
+                <li>
+                    Article 3
+                </li>
+            </ul>
+        </div>
+        <div class="item2">
+            <h2>Main Article</h3>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit sit suscipit asperiores illo assumenda iure veniam eum quo fugit magni delectus nesciunt maxime cum cumque odit amet perspiciatis debitis aspernatur vel aliquam fuga totam quod, aperiam natus!
+                Quia eum eligendi exercitationem incidunt iusto illum porro excepturi unde, quis repellat veniam dolorem eius pariatur nihil reprehenderit iste nobis doloribus ipsam magnam!
+            </p>
+        </div>
+        <div class="pictorial-news-section">
+            <h3>Pictorial News</h3>
+            <img src="https://images.hindustantimes.com/img/2023/01/29/550x309/delhi_rains_1674974112847_1674981888135_1674981888135.jpeg" alt="crowdofpeople" class="small-img">
+            <img src="https://images.hindustantimes.com/img/2023/01/29/550x309/ADANI-INDIA-GAUTAM-ADANI-0_1675011651023_1675011651023_1675011672003_1675011672003.JPG" alt="manpicture" class="small-img">
+            <img src="https://images.hindustantimes.com/img/2023/01/29/550x309/FRANCE-REFORM-PENSIONS-31_1675022359706_1675022359706_1675022383851_1675022383851.JPG" alt="oldladypicture" class="small-img">
+        </div>
+    </div>
 </body>
-
 </html>
